other/require-netpol/.chainsaw-test/deploy-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeploy01
  namespace: require-netpol-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeploy02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeploy03
  namespace: require-netpol-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
        see: saw
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeploy04
  namespace: require-netpol-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginbox
  template:
    metadata:
      labels:
        app: nginbox
        saw: see
        foo: bar
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
